Fix the spacing issue on the blogs page

--- a/pages/blogs/index.module.scss
+++ b/pages/blogs/index.module.scss
@@ -12,11 +12,9 @@
 	margin-bottom: 4rem;
 
 	&__Left {
-		flex: 0 0 70%;
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-start;
-		margin-right: 2rem;
 	}
 
 	&__Right {
@@ -31,11 +29,10 @@
 	margin-bottom: 4rem;
 
 	&__Left {
-		flex: 0 0 70%;
+		width: 67%;
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-start;
-		margin-right: 2rem;
 		@media only screen and(max-width: 1080px) {
 			flex: 1;
 			width: 100%;
@@ -62,14 +59,6 @@
 	}
 
 	&__Left {
-		flex: 0 0 30%;
-		justify-content: space-between;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
-		margin-right: 2rem;
-		height: 100%;
-
 		@media only screen and(max-width: 1080px) {
 			width: 0;
 			display: none;
@@ -77,7 +66,8 @@
 	}
 
 	&__Right {
-		flex: 0 0 70%;
+		display: flex;
+		justify-content: flex-end;
 		@media only screen and(max-width: 1080px) {
 			width: 100%;
 		}
@@ -88,7 +78,6 @@
 	margin-bottom: 4rem;
 	display: flex;
 	justify-content: space-between;
-	align-items: stretch;
 
 	@media only screen and(max-width: 1080px) {
 		flex-direction: column;
@@ -97,17 +86,10 @@
 	}
 
 	&__Left {
-		margin-right: 2rem;
-		flex: 0 0 70%;
-		justify-content: space-between;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
+		width: 100%;
 	}
 
 	&__Right {
-		flex: 0 0 30%;
-
 		@media only screen and(max-width: 1080px) {
 			margin: 10rem auto;
 		}
