--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -30,6 +30,13 @@
 	}
 }
 
+.divider {
+	width: 100%;
+	height: 2px;
+	background: #707070;
+	margin: 2rem auto;
+}
+
 #privacy-page {
 	font-size: 14px;
 
